# image-gif

./: Cargo.toml
src/: c_api.rs  c_api_utils.rs  common.rs  encoder.rs  lib.rs  traits.rs  util.rs
src/batch/: colors.rs  mod.rs
src/reader/: decoder.rs  mod.rs
tests/: check_testimages.rs
