[package]

name = "gif"
license = "MIT/Apache-2.0"
version = "0.10.0"
description = "GIF de- and encoder"
authors = ["hawkingrei <hawking.rei@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hawkingrei/image-gif.git"
homepage = "https://github.com/hawkingrei/image-gif"

exclude = [
    "tests/*",
    "gif-afl/*",
]

[dependencies]
lzw = "0.10"
color_quant = "1.0"

[dev-dependencies]
glob = "0.2.10"

[features]
default = ["raii_no_panic"]

raii_no_panic = []
c_api = ["libc"]

[dependencies.libc]
version = "0.2.1"
optional = true
